// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubaccountFilter Component renders open popover with options 1`] = `
<div
  className="SubaccountFilter"
>
  <Button
    onClick={[Function]}
    size="default"
  >
    <span
      className="ButtonLabel"
    >
      Master & All Subaccounts
    </span>
    <ArrowDropDown
      className="ButtonIcon"
    />
  </Button>
  <Popover
    bottom={true}
    className="Popover"
    left={true}
    open={true}
    right={true}
  >
    <SubaccountOption
      key="Master & All Subaccounts"
      label="Master & All Subaccounts"
      onChange={[Function]}
      onOpen={[Function]}
      selected={true}
      value={
        Object {
          "id": undefined,
          "name": "Master & All Subaccounts",
        }
      }
    />
    <SubaccountOption
      key="Master Account"
      label="Master Account"
      onChange={[Function]}
      onOpen={[Function]}
      selected={false}
      value={
        Object {
          "id": 0,
          "name": "Master Account",
        }
      }
    />
    <SubaccountOption
      key="Subaccount"
      label="Subaccount"
      nested={true}
      onChange={[Function]}
      onOpen={[Function]}
      selected={false}
      value={
        Object {
          "id": undefined,
          "name": "Subaccount",
        }
      }
    />
  </Popover>
</div>
`;

exports[`SubaccountFilter Component renders open popover with options after back button is clicked 1`] = `
<div
  className="SubaccountFilter"
>
  <Button
    onClick={[Function]}
    size="default"
  >
    <span
      className="ButtonLabel"
    >
      Master & All Subaccounts
    </span>
    <ArrowDropDown
      className="ButtonIcon"
    />
  </Button>
  <Popover
    bottom={true}
    className="Popover"
    left={true}
    open={true}
    right={true}
  >
    <SubaccountOption
      key="Master & All Subaccounts"
      label="Master & All Subaccounts"
      onChange={[Function]}
      onOpen={[Function]}
      selected={true}
      value={
        Object {
          "id": undefined,
          "name": "Master & All Subaccounts",
        }
      }
    />
    <SubaccountOption
      key="Master Account"
      label="Master Account"
      onChange={[Function]}
      onOpen={[Function]}
      selected={false}
      value={
        Object {
          "id": 0,
          "name": "Master Account",
        }
      }
    />
    <SubaccountOption
      key="Subaccount"
      label="Subaccount"
      nested={true}
      onChange={[Function]}
      onOpen={[Function]}
      selected={false}
      value={
        Object {
          "id": undefined,
          "name": "Subaccount",
        }
      }
    />
  </Popover>
</div>
`;

exports[`SubaccountFilter Component renders open popover with subaccount search 1`] = `
<div
  className="SubaccountFilter"
>
  <Button
    onClick={[Function]}
    size="default"
  >
    <span
      className="ButtonLabel"
    >
      Master & All Subaccounts
    </span>
    <ArrowDropDown
      className="ButtonIcon"
    />
  </Button>
  <Popover
    bottom={true}
    className="Popover"
    left={true}
    open={true}
    right={true}
  >
    <div
      className="SubaccountSearchHeader"
    >
      <UnstyledLink
        className="BackButton"
        onClick={[Function]}
      >
        <ChevronLeft
          size={20}
        />
      </UnstyledLink>
      <span>
        Subaccount
      </span>
    </div>
    <div
      className="SubaccountSearch"
    >
      <Connect(SubaccountTypeahead)
        label=""
        onChange={[Function]}
        placeholder="Search here"
      />
    </div>
  </Popover>
</div>
`;
